--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@douyinfe/semi-foundation": "^2.59.1",
+    "@douyinfe/semi-ui": "^2.59.1",
+    "@lark-base-open/js-sdk": "https://lf3-static.bytednsdoc.com/obj/eden-cn/jjjpceh7nulojvhj/@lark-base-open-js-sdk-0.4.0-alpha.12.tgz",
+    "@semi-bot/semi-theme-feishu-dashboard": "^1.0.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vite-plugin-semi-theming": "^0.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
