fix(xiong): add semi-ui

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@douyinfe/semi-ui": "^2.59.1",
     "@lark-base-open/js-sdk": "https://lf3-static.bytednsdoc.com/obj/eden-cn/jjjpceh7nulojvhj/@lark-base-open-js-sdk-0.4.0-alpha.12.tgz",
     "@semi-bot/semi-theme-feishu-dashboard": "^1.0.4",
+    "i18next": "^23.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.2",
     "vite-plugin-semi-theming": "^0.1.0"
   },
   "devDependencies": {
