--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "vite-plugin-svgr": "^4.2.0"
   }
 }
