--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@douyinfe/semi-foundation": "^2.59.1",
     "@douyinfe/semi-ui": "^2.59.1",
-    "@lark-base-open/js-sdk": "https://lf3-static.bytednsdoc.com/obj/eden-cn/jjjpceh7nulojvhj/@lark-base-open-js-sdk-0.4.0-alpha.12.tgz",
+    "@lark-base-open/js-sdk": "https://lf3-static.bytednsdoc.com/obj/eden-cn/jjjpceh7nulojvhj/@lark-base-open-js-sdk-0.4.1-beta.5.tgz",
     "@semi-bot/semi-theme-feishu-dashboard": "^1.0.4",
     "i18next": "^23.11.5",
     "react": "^18.2.0",
